# smart-chatter

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt
ci/: production-setup.sh
config/: settings.py  urls.py  wsgi.py
core/management/commands/: trainer.py  trainer_list.py
core/trainer_data/: custom.yml  feelings.yml
services/resources/: schema.py  urls.py
services/resources/chatterbot/: schema.py  views.py
services/tests/: test_conversation.py  test_message.py
